# tistory_writer

./: .dockerignore  .github_push_guide.md  .gitignore  BROWSER_AUTH_GUIDE.md  COOKIE_GUIDE.md  DEPLOY.md  DEPLOY_GITHUB.md  Dockerfile  README.md  USAGE.md  config.yaml.example  docker-compose.yml  docker-entrypoint.sh  papers_template.json  pyproject.toml  requirements.txt  review.sh  run_gui.sh
data/: paper_state.json  papers.json
docs/: USER_MANUAL.md
scripts/: add_papers.py  collect_papers.py  generate_all_outputs.py  generate_paper_review.py  generate_single_output.py  get_project_root.py  main.py  publish_gui.py  refresh_cookies.py  reset_progress.py  simple_review.py  test_chrome.py  test_scientific_review.py
src/api/: tistory_api.py
src/auth/: __init__.py  browser_auth.py
src/client/: claude_client.py  openai_client.py  scientific_mcp_client.py
src/content/: content_generator.py  image_finder.py
src/data/: paper_collector.py  paper_manager.py  paper_searcher.py  post_manager.py
src/utils/: cookie_refresher.py  scheduler.py
tests/: test_category.py  test_post.py
